gif into header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       				<button type="submit" class="btn btn-default" name="Search">Go</button>
       			</form>
 			</div>
-			<img src="images/header_image1.jpg" alt="header image" class="img-responsive cleaner">
+			<img src="giphy.gif" alt="header image" class="img-responsive cleaner">
 			<div class="navbar templatemo-nav" id="navbar">
 				<div class="navbar-header">
 		          	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -48,7 +48,7 @@
 		        </div>
       			<div class="navbar-collapse collapse">
 			        <ul class="nav nav-justified">
-			          <li><a href="index.html" style="color=red">Home</a></li>
+			          <li><a href="index.html">Home</a></li>
 	                  <li class="active"><a href="about.html">About</a></li>
 			          <li><a href="preview.html">Products</a></li>
 			          <li><a href="preview.html">Services</a></li>
