--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       				<button type="submit" class="btn btn-default" name="Search">Go</button>
       			</form>
 			</div>
-			<img src="MeNotCropped.jpg" width="100%" height="100%" alt="header image" class="img-responsive cleaner">
+			<img src="MeNotCropped.jpg" width="50%" align="center" alt="header image" class="img-responsive cleaner">
 			<div class="navbar templatemo-nav" id="navbar">
 				<div class="navbar-header">
 		          	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
