--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
 	      	</div>
 			<div class="row" id="content">
 				<div class="col-md-6">
-					<h2>Nam Imperdiet Aliquam</h2>
+					<h2>Hi, I'm Amanda!/h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed mauris eu ligula convallis fringilla. Morbi at tincidunt justo, non vestibulum nisi. Quisque dictum mi ut ullamcorper iaculis. Donec in mi ut nulla consectetur dictum. In elementum a urna quis feugiat. Quisque a porttitor metus. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow">XHTML</a> &amp; <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow">CSS</a>.</p>
 				</div>
 				<div class="col-md-6">
-					<h2>Aliquam Erat Volutpat</h2>
-					<p>This is free responsive HTML5 template that can be viewed in any mobile device. Vivamus adipiscing, lorem a rhoncus adipiscing, dolor massa hendrerit sem, suscipit fermentum justo dolor at sapien. Sed volutpat libero lectus, nec pulvinar tellus dictum eu. Praesent luctus feugiat mattis. Pellentesque ut diam vehicula, mattis nisi at, convallis neque.</p>
+					<h2>  </h2>
+					<br>
+          <br>
 				</div>
 			</div>
 			<div class="row">
