--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	      	</div>
 			<div class="row" id="content">
 				<div class="col-md-6">
-					<h2>Hi, I'm Amanda!</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed mauris eu ligula convallis fringilla. Morbi at tincidunt justo, non vestibulum nisi. Quisque dictum mi ut ullamcorper iaculis. Donec in mi ut nulla consectetur dictum. In elementum a urna quis feugiat. Quisque a porttitor metus. Validate <a href="http://validator.w3.org/check?uri=referer" rel="nofollow">XHTML</a> &amp; <a href="http://jigsaw.w3.org/css-validator/check/referer" rel="nofollow">CSS</a>.</p>
+					<h1>Hi, I'm Amanda!</h1>
+					<p>The purpose of this website is to help you learn a little more about me, what goals I have, and what experience is under my belt. Please, have a look around!</p>
 				</div>
 				<div class="col-md-6">
 					<h2>  </h2>
@@ -73,7 +73,7 @@
 					<p>Maecenas adipiscing semper sapien at pretium. Aenean tortor leo, venenatis vitae pretium sit amet, blandit porta diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 				</div>
 				<div class="col-md-3">
-					<h3>Integer ac Urna</h3>
+					<h3></h3>
 					<p><a href="#">Maecenas adipiscing</a> semper sapien at pretium. Aenean tortor leo, venenatis vitae pretium sit amet, blandit porta diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.            </p>
 				</div>
 				<div class="col-md-3">
