--- a/index.html
+++ b/index.html
@@ -69,19 +69,20 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3">
-					<h3>Morbi Quis </h3>
-					<p>Maecenas adipiscing semper sapien at pretium. Aenean tortor leo, venenatis vitae pretium sit amet, blandit porta diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+					<h3>Occupational Status</h3>
+					<p>I am currently employed as a hostess at Thin Man Brewery.</p>
+          <p>During the semester, I am a student at the University at Buffalo pursuing the school's five year master's program to recieve a combined (BS/MS) in Computer Science. </p>
 				</div>
 				<div class="col-md-3">
 					<h3></h3>
 					<p><a href="#">Maecenas adipiscing</a> semper sapien at pretium. Aenean tortor leo, venenatis vitae pretium sit amet, blandit porta diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.            </p>
 				</div>
 				<div class="col-md-3">
-					<h3>Neque Vel Auctor</h3>
+					<h3>Goals</h3>
 					<p>Donec ipsum diam, fermentum eu scelerisque quis, vestibulum sit amet orci. Cras in commodo libero. Duis ut urna sit amet est feugiat ultrices id eget metus. Nulla et eros tellus, a hendrerit nulla. Maecenas adipiscing semper.</p>
 				</div>
 				<div class="col-md-3">
-					<h3>Maecenas Id </h3>
+					<h3>Hobbies</h3>
 					<p>Pellentesque ac magna quis sem aliquam viverra id sit amet justo. Nunc egestas sodales eros, et tristique sapien laoreet sit amet. Sed quis rutrum ipsum. Suspendisse ullamcorper augue sit amet arcu malesuada.</p>
 				</div>
 			</div>
