--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
 				<div class="col-md-3">
 					<h3>Occupational Status</h3>
 					<p>I am currently employed as a hostess at Thin Man Brewery.</p>
-          <p>During the semester, I am a student at the University at Buffalo pursuing the school's five year master's program to recieve a combined (BS/MS) in Computer Science. </p>
+          <p>However, during the school year, I am a student at the University at Buffalo pursuing the school's five year master's program to recieve a combined (BS/MS) in Computer Science. </p>
 				</div>
 				<div class="col-md-3">
-					<h3></h3>
-					<p><a href="#">Maecenas adipiscing</a> semper sapien at pretium. Aenean tortor leo, venenatis vitae pretium sit amet, blandit porta diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.            </p>
-				</div>
+					<h3>Hobbies</h3>
+					<p>I like to play games like Dungeons & Dragons, World of Warcraft, and Magic: the Gathering. </p>
+          <p> </p>
+        </div>
 				<div class="col-md-3">
-					<h3>Goals</h3>
-					<p>Donec ipsum diam, fermentum eu scelerisque quis, vestibulum sit amet orci. Cras in commodo libero. Duis ut urna sit amet est feugiat ultrices id eget metus. Nulla et eros tellus, a hendrerit nulla. Maecenas adipiscing semper.</p>
-				</div>
+					<h3>Career Goals</h3>
+					<p>I love coding and have a great appreciation for the amount of effort that goes into creating a good gaming experience. It has long been a dream of mine to help in the development in video games, and I would love to pursue this as a career.</p>
+        </div>
 				<div class="col-md-3">
 					<h3>Hobbies</h3>
 					<p>Pellentesque ac magna quis sem aliquam viverra id sit amet justo. Nunc egestas sodales eros, et tristique sapien laoreet sit amet. Sed quis rutrum ipsum. Suspendisse ullamcorper augue sit amet arcu malesuada.</p>
