--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 				<div class="col-md-3">
 					<h3>Hobbies</h3>
 					<p>I like to play games like Dungeons & Dragons, World of Warcraft, and Magic: the Gathering. </p>
+          <p>Anything based in strategy is appealing. I love a challenge! Things with a roleplaying aspect and a good dose of fantasy are always a plus as well.</p>
           <p> </p>
         </div>
 				<div class="col-md-3">
