byebye nav header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width" />
-	<title>About Fantasy</title>
+	<title>Amanda Golden</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -16,18 +16,14 @@
 	<link href="css/justified-nav.css" rel="stylesheet" type="text/css">
 	<link href="css/templatemo_style.css" rel="stylesheet" type="text/css">
 
-	<!-- HTML 5 shim for IE backwards compatibility -->
-		<!-- [if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-		</script>
-		<![endif]-->
+
 </head>
 <body>
 	<div id="main_container">
 		<div class="container" id="about">
 			<div class="header">
 				<div class="navbar-header">
-		          	<a href="#"><img src="images/templatemo_logo.jpg" alt="fantasy" class="templatemo-logo"></a>
+		<!--        	<a href="#"><img src="images/templatemo_logo.jpg" alt="Me!" class="templatemo-logo"></a>   -->
 		        </div>
       			<form  action="#" method="get" class="navbar-form navbar-right" role="search">
       				<div class="form-group">
