--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<div id="main_container">
 		<div class="container" id="about">
 			<div class="header">
-				<div class="navbar-header">
-		<!--        	<a href="#"><img src="images/templatemo_logo.jpg" alt="Me!" class="templatemo-logo"></a>   -->
+		<!--		<div class="navbar-header">
+		        	<a href="#"><img src="images/templatemo_logo.jpg" alt="Me!" class="templatemo-logo"></a>   -->
 		        </div>
       			<form  action="#" method="get" class="navbar-form navbar-right" role="search">
       				<div class="form-group">
