--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       				<button type="submit" class="btn btn-default" name="Search">Go</button>
       			</form>
 			</div>
-			<img src="MeNotCropped.jpg" width="50%" align="center" alt="header image" >
+			<img src="MeNotCropped.jpg" width="50%" align="middle" alt="header image" >
 			<div class="navbar templatemo-nav" id="navbar">
 				<div class="navbar-header">
 		          	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
