--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       				<button type="submit" class="btn btn-default" name="Search">Go</button>
       			</form>
 			</div>
-			<img src="MeNotCropped.jpg" width="50%" align="middle" alt="header image" >
+			<img src="MeNotCropped.jpg" width="50%" align="center" alt="header image" >
 			<div class="navbar templatemo-nav" id="navbar">
 				<div class="navbar-header">
 		          	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -42,15 +42,6 @@
 						<span class="icon-bar"></span>
 					</button>
 		        </div>
-      			<div class="navbar-collapse collapse">
-			        <ul class="nav nav-justified">
-			          <li><a href="index.html">Home</a></li>
-	                  <li class="active"><a href="about.html">About</a></li>
-			          <li><a href="preview.html">Products</a></li>
-			          <li><a href="preview.html">Services</a></li>
-			          <li><a href="contact.html">Contact</a></li>
-			        </ul>
-		      	</div> <!-- nav -->
 	      	</div>
 			<div class="row" id="content">
 				<div class="col-md-6">
