--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <hr class="featurette-divider">
 
-            
+
 				</div>
 			</div>
 		</div>
@@ -95,14 +95,13 @@
 			<div class="credit row">
 				<div class="col-md-6 col-md-offset-3">
 					<div id="templatemo_footer">
-						Copyright © 2084 <a href="#">Your Company Name</a>
+						Copyright © 2016
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div style="text-align: right">
-						<a href="#"><img src="images/facebook.png" alt="Like us on Facebook"></a>
-						<a href="#"><img src="images/twitter.png" alt="Follow us on Twitter"></a>
-						<a href="#"><img src="images/rss.png" alt="RSS feeds"></a>
+						<a href="#"><img src="facebook.png" alt="Like us on Facebook"></a>
+						<a href="#"><img src="twitter.png" alt="Follow us on Twitter"></a>
 					</div>
 				</div>
 			</div>
