--- a/index.html
+++ b/index.html
@@ -35,8 +35,25 @@
 			<img src="MeNotCropped.jpg" width="50%" align="center" alt="header image" >
 			<div class="navbar templatemo-nav" id="navbar">
 				<div class="navbar-header">
-
+		          	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 		        </div>
+      			<div class="navbar-collapse collapse">
+			        <ul class="nav nav-justified">
+			          <li><a href="index.html">Home</a></li>
+	                  <li class="active"><a href="https://amandathepanda.github.io">Home</a></li>
+			          <li><a href="preview.html">Pong Game</a></li>
+                    <li class="active"><a href="pongindex.html">Pong</a></li>
+			          <li><a href="preview.html">Game 2</a></li>
+                    <li class="active"><a href="https://amandathepanda.github.io">Game 2</a></li>
+			          <li><a href="contact.html">Game 3</a></li>
+                    <li class="active"><a href="https://amandathepanda.github.io">Game 3</a></li>
+			        </ul>
+		      	</div> <!-- nav -->
 	      	</div>
 			<div class="row" id="content">
 				<div class="col-md-6">
@@ -75,9 +92,9 @@
 
 			<div class="row">
 				<div class="col-md-3">
-					<h3>Imerdiet Aliquam</h3>
-					<p>Quisque a porttitor metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus pulvinar ligula in lorem gravida, vel congue leo sodales. Quisque bibendum iaculis libero et porttitor.</p>
-				</div>
+					<h3>Portfolio</h3>
+					<p>While most game-making experience I have at this point has been in table-top form, working on Dungeons and Dragons campaigns, I have recently been able to put a bit of work into learning to code some browser-based games. Some examples can be found through the links in the navigation bar at the top of this page.</p>
+        </div>
 				<div class="col-md-9">
 					<h3>Nam Imperdiet Aliquam</h3>
 					<p>Maecenas adipiscing semper sapien at pretium. Aenean tortor leo, venenatis vitae pretium sit amet, blandit porta diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi semper mauris vel erat suscipit venenatis. Nullam rhoncus porta tortor ut semper. Etiam elit dolor, vehicula eu sodales ac, lacinia sed mauris. Vestibulum convallis est nulla, lacinia dictum nisi porttitor at.</p>
@@ -87,7 +104,32 @@
 
             <hr class="featurette-divider">
 
-
+			<div class="row">
+				<div class="col-md-4">
+					<h2>Lorem Ipsum Dolor</h2>
+					<p>Cras mi lectus, tempus vitae venenatis vitae, lobortis in felis. Morbi hendrerit massa et neque facilisis iaculis. Morbi ante odio, ullamcorper eu consequat non, consectetur nec ipsum. Nullam molestie aliquam diam at lacinia. Curabitur dignissim placerat nisl, nec bibendum enim laoreet non. </p>
+					<a href="#" class="more btn btn-warning btn-sm" role="button">More</a>
+				</div>
+				<div class="col-md-4">
+					<h2>Lorem Ipsum Dolor</h2>
+					<ul class="list_bullet">
+	                    <li>Tempus vitae lobortis</li>
+	                    <li>Morbi hendrerit massa</li>
+	                    <li>Nullam aliquam diam</li>
+	                    <li>Curab dignis placerat</li>
+	                    <li>Vulputate vitae risus</li>
+	                    <li>Phasellus euismod est</li>
+	                    <li>Class aptent taciti</li>
+	                </ul>
+				</div>
+				<div class="col-md-4">
+					<h2>Testimonial</h2>
+					<div class="testimonial">
+	                	<blockquote>
+	                        <p>"Nullam molestie aliquam diam at lacinia. Curabitur placerat nisl, nec bibendum enim laoreet non."</p>
+	                        <p class="name"><a href="#">Harry</a> <span> - CEO of our company</span></p>
+						</blockquote>
+	                </div>
 				</div>
 			</div>
 		</div>
@@ -95,13 +137,14 @@
 			<div class="credit row">
 				<div class="col-md-6 col-md-offset-3">
 					<div id="templatemo_footer">
-						Copyright © 2016
+						Copyright © 2084 <a href="#">Your Company Name</a>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div style="text-align: right">
-						<a href="#"><img src="facebook.png" alt="Like us on Facebook"></a>
-						<a href="#"><img src="twitter.png" alt="Follow us on Twitter"></a>
+						<a href="#"><img src="images/facebook.png" alt="Like us on Facebook"></a>
+						<a href="#"><img src="images/twitter.png" alt="Follow us on Twitter"></a>
+						<a href="#"><img src="images/rss.png" alt="RSS feeds"></a>
 					</div>
 				</div>
 			</div>
